Clean up CommandSummon